correction layout shift

--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -2,7 +2,8 @@ input, textarea, select {
   appearance: none;
   width: 100%;
   border-radius: .8rem;
-  border: .1rem solid var(--stroke-dafault);
+  border: .2rem solid transparent;
+  outline: .1rem solid var(--stroke-dafault);
 
   padding: 1.2rem 1.6rem;
 
@@ -21,7 +22,7 @@ select:focus,
 textarea:focus,
 input[type="date"]:focus-within {
   outline: .4rem solid var(--surface-secondary);  
-  border: .2rem solid var(--stroke-highlight);
+  border-color: var(--stroke-highlight);
   outline-offset: .1px;
 }
 
